worked on about us page

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@
     font-family: 'Inter', sans-serif;
   }
 }
+
+@layer components {
+  .my_container {
+    @apply max-w-[1170px] md:mx-[20px] mx-[10px] lg:mx-auto px-[5px];
+  }
+  .text{
+    @apply text-[18px] leading-[30px]
+  }
+}
