--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,13 @@
   .text{
     @apply text-[18px] leading-[30px]
   }
+  .heading_2{
+    @apply text-[64px] font-secondary font-bold leading-[76px]
+  }
+  .heading_3{
+    @apply text-[44px] font-secondary font-bold leading-[52px]
+  }
+  .paragraph{
+    @apply text-[#464646]
+  }
 }
