--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,7 @@
   .main_heading{
     @apply font-extrabold font-secondary text-[70px] md:text-[90px] lg:text-[120px] leading-[90px] md:leading-[110px] lg:leading-[140px] text-center
   }
+  .nav_link{
+    @apply text-[#929292] text-[16px] leading-[24px] hover:text-[#1F1F1F] hover:font-bold
+  }
 }
