home page banner done

--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,13 @@
 
 @layer components {
   .my_container {
-    @apply max-w-[1170px] md:mx-[20px] mx-[10px] lg:mx-auto px-[5px];
+    @apply max-w-[1170px] md:mx-[20px] mx-[10px] xl:mx-[30px] 2xl:mx-auto px-[5px];
   }
   .text{
     @apply  text-[16px] md:text-[18px] leading-[30px] text-[#464646]
   }
   .heading_2{
-    @apply text-[64px] font-secondary font-bold leading-[76px]
+    @apply 2xl:text-[64px] xl:text-[58px] text-[48px] font-secondary font-bold 2xl:leading-[76px] xl:leading-[68px] leading-[58px]
   }
   .heading_3{
     @apply text-[44px] font-secondary font-bold leading-[52px]
